# VertexEngine-Code

./: README.md  pyproject.toml
Documentation/: index.html
src/VertexEngine/Vertex/: __init__.py
webcache/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000003  f_000005  index
webstorage/: Cookies  Favicons  History-journal  Network Persistent State  Visited Links
webstorage/DawnGraphiteCache/: data_1  index
webstorage/DawnWebGPUCache/: data_1  index
webstorage/GPUCache/: data_1  index
webstorage/Shared Dictionary/cache/index-dir/: the-real-index
